genrule(
    name = "cacheable_step",
    srcs = [],
    outs = ["cacheable_output.txt"],
    cmd = """
        echo "=== Bazel 7.4+ Cacheable Step ===" > $@
        echo "Generated at build time (should be cached)" >> $@
        echo "Deterministic content: Hello from Bazel 7.4+" >> $@
        echo "Timestamp (for reference only): $$(date -u +%Y-%m-%dT%H:%M:%SZ)" >> $@
    """,
    tags = [
        "cacheable",
        "remote-cacheable",
    ],
    visibility = ["//visibility:public"],
)

genrule(
    name = "non_cacheable_step",
    srcs = [":cacheable_step"],
    outs = ["non_cacheable_output.txt"],
    cmd = """
        echo "=== Bazel 7.4+ Non-Cacheable Step ===" > $@
        echo "This step depends on cacheable_step" >> $@
        echo "" >> $@
        echo "Input from cacheable step:" >> $@
        cat $(location :cacheable_step) >> $@
        echo "" >> $@
        echo "Non-cacheable content (unique per run): $$(date +%s.%N)" >> $@
        echo "Random: $$(cat /dev/urandom | head -c 8 | xxd -p)" >> $@
    """,
    tags = [
        "local",
        "no-cache",
        "no-remote-cache",
    ],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "all_outputs",
    srcs = [
        ":cacheable_step",
        ":non_cacheable_step",
    ],
    visibility = ["//visibility:public"],
)

genrule(
    name = "test_summary",
    srcs = [":non_cacheable_step"],
    outs = ["test_summary.txt"],
    cmd = """
        echo "========================================" > $@
        echo "   Bazel 7.4+ Remote Execution Test" >> $@
        echo "========================================" >> $@
        echo "" >> $@
        echo "Build Summary:" >> $@
        echo "- Cacheable step: //:cacheable_step" >> $@
        echo "- Non-cacheable step: //:non_cacheable_step" >> $@
        echo "" >> $@
        echo "Output:" >> $@
        cat $(location :non_cacheable_step) >> $@
        echo "" >> $@
        echo "========================================" >> $@
    """,
    visibility = ["//visibility:public"],
)
