genrule(
    name = "cacheable_step",
    srcs = [],
    outs = ["cacheable_output.txt"],
    cmd = """
        echo "=== Bazel 8.x Cacheable Step ===" > $@
        echo "Generated at build time (should be cached)" >> $@
        echo "Deterministic content: Hello from Bazel 8.x" >> $@
        echo "REAPI Version Required: v2.4" >> $@
        echo "Timestamp (for reference only): $$(date -u +%Y-%m-%dT%H:%M:%SZ)" >> $@
    """,
    tags = [
        "cacheable",
        "remote-cacheable",
    ],
    visibility = ["//visibility:public"],
)

genrule(
    name = "non_cacheable_step",
    srcs = [":cacheable_step"],
    outs = ["non_cacheable_output.txt"],
    cmd = """
        echo "=== Bazel 8.x Non-Cacheable Step ===" > $@
        echo "This step depends on cacheable_step" >> $@
        echo "" >> $@
        echo "Input from cacheable step:" >> $@
        cat $(location :cacheable_step) >> $@
        echo "" >> $@
        echo "Non-cacheable content (unique per run): $$(date +%s.%N)" >> $@
        echo "Random: $$(cat /dev/urandom | head -c 8 | xxd -p)" >> $@
    """,
    tags = [
        "local",
        "no-cache",
        "no-remote-cache",
    ],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "all_outputs",
    srcs = [
        ":cacheable_step",
        ":non_cacheable_step",
    ],
    visibility = ["//visibility:public"],
)

genrule(
    name = "test_summary",
    srcs = [":non_cacheable_step"],
    outs = ["test_summary.txt"],
    cmd = """
        echo "========================================" > $@
        echo "     Bazel 8.x Remote Execution Test" >> $@
        echo "========================================" >> $@
        echo "" >> $@
        echo "Build Summary:" >> $@
        echo "- Cacheable step: //:cacheable_step" >> $@
        echo "- Non-cacheable step: //:non_cacheable_step" >> $@
        echo "- REAPI Required: v2.4" >> $@
        echo "" >> $@
        echo "Output:" >> $@
        cat $(location :non_cacheable_step) >> $@
        echo "" >> $@
        echo "========================================" >> $@
    """,
    visibility = ["//visibility:public"],
)

genrule(
    name = "reapi_check",
    srcs = [],
    outs = ["reapi_version.txt"],
    cmd = """
        echo "REAPI v2.4 Compatibility Check" > $@
        echo "Required fields:" >> $@
        echo "  - deprecated_api_version (field 3)" >> $@
        echo "  - low_api_version (field 4)" >> $@
        echo "  - high_api_version (field 5)" >> $@
        echo "" >> $@
        echo "Bazel 8.x requires all v2.4 fields to be present." >> $@
    """,
    visibility = ["//visibility:public"],
)
