package(default_visibility = ["//visibility:public"])

load("@rules_cc//cc:defs.bzl", "cc_toolchain")
load(":cc_toolchain_config.bzl", "gcc_toolchain_config")

# Platform for Linux ARM64 remote execution
platform(
    name = "linux_arm64",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:arm64",
    ],
    exec_properties = {
        "OSFamily": "Linux",
        "container-image": "docker://xangcastle/ferris-worker:latest",
    },
)

# GCC Toolchain for Linux ARM64
gcc_toolchain_config(
    name = "gcc_linux_arm64_config",
    cpu = "arm64",
)

cc_toolchain(
    name = "gcc_linux_arm64",
    toolchain_identifier = "gcc_linux",
    toolchain_config = ":gcc_linux_arm64_config",
    all_files = ":empty",
    ar_files = ":empty",
    as_files = ":empty",
    compiler_files = ":empty",
    dwp_files = ":empty",
    linker_files = ":empty",
    objcopy_files = ":empty",
    strip_files = ":empty",
    supports_param_files = 0,
)

toolchain(
    name = "gcc_linux_arm64_toolchain",
    toolchain = ":gcc_linux_arm64",
    toolchain_type = "@bazel_tools//tools/cpp:toolchain_type",
    target_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:arm64",
    ],
    exec_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:arm64",
    ],
)

filegroup(name = "empty")
