load("@rules_cc//cc:defs.bzl", "cc_toolchain")
load(":cc_toolchain_config.bzl", "gcc_toolchain_config")

package(default_visibility = ["//visibility:public"])

platform(
    name = "linux_arm64",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:arm64",
    ],
    exec_properties = {
        "OSFamily": "Linux",
        "container-image": "docker://xangcastle/ferris-worker:latest",
    },
)

platform(
    name = "linux_amd64",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
    exec_properties = {
        "OSFamily": "Linux",
        "container-image": "docker://xangcastle/ferris-worker:latest",
    },
)

gcc_toolchain_config(
    name = "gcc_linux_arm64_config",
    cpu = "arm64",
)

cc_toolchain(
    name = "gcc_linux_arm64",
    all_files = ":empty",
    ar_files = ":empty",
    as_files = ":empty",
    compiler_files = ":empty",
    dwp_files = ":empty",
    linker_files = ":empty",
    objcopy_files = ":empty",
    strip_files = ":empty",
    supports_param_files = 0,
    toolchain_config = ":gcc_linux_arm64_config",
    toolchain_identifier = "gcc_linux",
)

toolchain(
    name = "gcc_linux_arm64_toolchain",
    exec_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:arm64",
    ],
    target_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:arm64",
    ],
    toolchain = ":gcc_linux_arm64",
    toolchain_type = "@bazel_tools//tools/cpp:cc_toolchain_type",
)

gcc_toolchain_config(
    name = "gcc_linux_amd64_config",
    cpu = "x86_64",
)

cc_toolchain(
    name = "gcc_linux_amd64",
    all_files = ":empty",
    ar_files = ":empty",
    as_files = ":empty",
    compiler_files = ":empty",
    dwp_files = ":empty",
    linker_files = ":empty",
    objcopy_files = ":empty",
    strip_files = ":empty",
    supports_param_files = 0,
    toolchain_config = ":gcc_linux_amd64_config",
    toolchain_identifier = "gcc_linux",
)

toolchain(
    name = "gcc_linux_amd64_toolchain",
    exec_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
    target_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
    toolchain = ":gcc_linux_amd64",
    toolchain_type = "@bazel_tools//tools/cpp:cc_toolchain_type",
)

filegroup(name = "empty")
